--- a/src/app/resume/resume.component.html
+++ b/src/app/resume/resume.component.html
@@ -16,8 +16,8 @@
                                 <i class="uil uil-calendar-alt"></i>
                                 <p>2019 Finalizado </p>
                             </div>
-                            <h4>Bachillerato</h4>
-                            <p>Jorge Eliecer Gaitan</p>
+                            <h4>Bachillerato </h4>
+                            <p>Jorge Eliecer Gaitan </p>
                             <p>Colombia
                                 <img class="img-1" src="https://cdn-icons-png.flaticon.com/512/330/330508.png" alt="">
                             </p>
@@ -27,10 +27,10 @@
                         <div class="text">
                             <div class="experiencia__calendar">
                                 <i class="uil uil-calendar-alt"></i>
-                                <p>2023 Finalizado</p>
+                                <p>2023 Finalizado </p>
                             </div>
-                            <h4>Analisis y Desarrollo De Sistemas De Informacion</h4>
-                            <p>Sena - Tecnologo</p>
+                            <h4>Analisis y Desarrollo De Sistemas De Informacion </h4>
+                            <p>Sena - Tecnologo </p>
                             <p>Colombia
                                 <img class="img-1" src="https://cdn-icons-png.flaticon.com/512/330/330508.png" alt="">
                             </p>
@@ -40,10 +40,10 @@
                         <div class="text">
                             <div class="experiencia__calendar">
                                 <i class="uil uil-calendar-alt"></i>
-                                <p>2019 / Actualmente 7º</p>
+                                <p> 2019 / Actualmente 7º</p>
                             </div>
                             <h4>Ingenieria de Sistemas</h4>
-                            <p>UNAD</p>
+                            <p>UNAD </p>
                             <p>Colombia
                                 <img class="img-1" src="https://cdn-icons-png.flaticon.com/512/330/330508.png" alt="">
                             </p>
@@ -58,10 +58,10 @@
                         <div class="text">
                             <div class="experiencia__calendar">
                                 <i class="uil uil-calendar-alt"></i>
-                                <p>2022 / 2023 Finalizado</p>
+                                <p> 2022 / 2023 Finalizado </p>
                             </div>
-                            <h4>Auxiliar Frontend</h4>
-                            <p>Lineru - Tangelo</p>
+                            <h4>Auxiliar Frontend </h4>
+                            <p>Lineru - Tangelo </p>
                             <p>Colombia
                                 <img class="img-1" src="https://cdn-icons-png.flaticon.com/512/330/330508.png" alt="">
                             </p>
@@ -71,10 +71,10 @@
                         <div class="text">
                             <div class="experiencia__calendar">
                                 <i class="uil uil-calendar-alt"></i>
-                                <p>2022 / 2023 Finalizado</p>
+                                <p> 2022 / 2023 Finalizado </p>
                             </div>
-                            <h4>Auxiliar Qa Analyst</h4>
-                            <p>Lineru - Tangelo</p>
+                            <h4>Auxiliar Qa Analyst </h4>
+                            <p>Lineru - Tangelo </p>
                             <p>Colombia
                                 <img class="img-1" src="https://cdn-icons-png.flaticon.com/512/330/330508.png" alt="">
                             </p>
@@ -83,6 +83,7 @@
                 </div>
             </div>
         </div>
+
         <div class="habilidades">
             <div class="title">
                 <div class="text-animate2">
@@ -90,19 +91,30 @@
                 </div>
                 <div class="line"></div>
             </div>
-            <div class="container">
+            <div class="container a2">
                 <div class="box_contain">
-                    <div class="wrapper" (mousemove)="onMouseMove($event)" (mouseleave)="onMouseLeave()">
-                        <div class="ticket 1">
+                    <div #wrapper class="wrapper">
+                        <div #ticket class="ticket b1">
+                            <img class="imagen" src="../../assets/img/angular.png" alt="">
+                            <div class="bg1">
+                              
+
+                            </div>
+                            <div class="bg2">
+                                    
+                            </div>
                             <h1>Angular</h1>
-                            <div class="bg"></div>
+
+                          <div class="bg"></div>
                         </div>
-                    </div>
+                      </div>
+                    
                 </div>
             </div>
         </div>
     </section>
+
     <div class="footer">
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. </p>
     </div>
 </div>
