terminado diseño card 3d

--- a/src/app/resume/resume.component.html
+++ b/src/app/resume/resume.component.html
@@ -94,7 +94,7 @@
             <div class="container a2">
                 <div class="box_contain">
                     <div #wrapper class="wrapper">
-                        <div #ticket class="ticket b1">
+                        <div #ticket class="ticket d1">
                             <img class="imagen" src="../../assets/img/angular.png" alt="">
                             <div class="bg1">
                               
