--- a/src/app/resume/resume.component.css
+++ b/src/app/resume/resume.component.css
@@ -300,7 +300,7 @@
 
 .ticket {
     border: 2px solid #dd002c;
-    box-shadow: 0 0 10px 3px #dd002c;
+    box-shadow:0 0 20px 5px #dd002cb4;
     width: 200px;
     aspect-ratio: 18/9;
     border-radius: 20px;
@@ -332,27 +332,69 @@
     gap: 8px;
     grid-auto-flow: row dense;
 }
-
 .bg {
     top: 0;
-    background: rgba(0, 0, 0, .3);
     position: absolute;
-    filter: blur(20px);
     width: 100%;
     height: 100%;
 }
-
-.bg1 {
+.bg:hover {
+    background: rgba(0, 0, 0, 54%);
+    filter: blur(20px);
+}
+.bg1::before{
+    content: "";
+    position: absolute;
+    top: -1px;
+    left: 11px;
+    transform: rotate(315deg);
+    height: 25px;
+    border: 1px solid #dd002c;
     box-shadow: 0 0 20px 5px #dd002c;
+
+}
+.bg1::after{
+    content: "";
+    position: absolute;
+    top: 30px;
+    left: 10px;
+    transform: rotate(45deg);
+    height: 25px;
+    border: 1px solid #dd002c;
+    box-shadow: 0 0 20px 5px #dd002c;
+}
+.bg1 {
+    box-shadow: 0 0 20px 0px #dd002c;
     width: 160px;
     border-radius: 15px;
     height: 60px;
     border: 2px solid #dd002c;
     position: absolute;
 }
-
-.bg2 {
+.bg2::before{
+    content: "";
+    position: absolute;
+    top: 11px;
+    right: -8px;
+    transform: rotate(315deg);
+    height: 26px;
+    border: 1px solid #dd002c;
     box-shadow: 0 0 20px 5px #dd002c;
+
+}
+.bg2::after{
+    content: "";
+    position: absolute;
+    top: -22px;
+    right: -9px;
+    transform: rotate(45deg);
+    height: 25px;
+    border: 1px solid #dd002c;
+    box-shadow: 0 0 20px 5px #dd002c;
+
+}
+.bg2 {
+    box-shadow: 0 0 15px 0px #dd002c;
     width: 120px;
     border-radius: 8px;
     height: 20px;
@@ -363,8 +405,7 @@
 h1 {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: #fff;
-    padding: 20px;
-    font-size: 25px;
+    font-size: 19px;
     font-weight: 900;
     z-index: 10;
 }
