--- a/src/app/resume/resume.component.css
+++ b/src/app/resume/resume.component.css
@@ -338,10 +338,15 @@
     position: absolute;
     width: 100%;
     height: 100%;
-}
-.bg:hover {
     background: rgba(0, 0, 0, 54%);
     filter: blur(20px);
+    transition: .6s;
+
+
+}
+.bg:hover {
+    background: none;
+
 }
 .bg1::before{
     content: "";
@@ -415,6 +420,40 @@ h1 {
 .wrapper {
     perspective: 1000px;
     grid-auto-flow: row;
+}
+.ticket.d2 {
+    border: 2px solid #00a2ff;
+    box-shadow: 0 0 20px 5px #00a2ffb4;
+}
+
+.ticket.d2 .bg1::before {
+    border-color: #00a2ff;
+    box-shadow: 0 0 20px 5px #00a2ff;
+}
+
+.ticket.d2 .bg1::after {
+    border-color: #00a2ff;
+    box-shadow: 0 0 20px 5px #00a2ff;
+}
+
+.ticket.d2 .bg1 {
+    border: 2px solid #00a2ff;
+    box-shadow: 0 0 20px 0px #00a2ff;
+}
+
+.ticket.d2 .bg2::before {
+    border-color: #00a2ff;
+    box-shadow: 0 0 20px 5px #00a2ff;
+}
+
+.ticket.d2 .bg2::after {
+    border-color: #00a2ff;
+    box-shadow: 0 0 20px 5px #00a2ff;
+}
+
+.ticket.d2 .bg2 {
+    border: 2px solid #00a2ff;
+    box-shadow: 0 0 15px 0px #00a2ff;
 }
 
 .footer {
