--- a/src/app/resume/resume.component.html
+++ b/src/app/resume/resume.component.html
@@ -1,4 +1,3 @@
-<!-- resume.component.html -->
 <div class="resumen">
     <div class="title">
         <div class="text-animate2">
@@ -84,7 +83,6 @@
                 </div>
             </div>
         </div>
-
         <div class="habilidades">
             <div class="title">
                 <div class="text-animate2">
@@ -94,12 +92,22 @@
             </div>
             <div class="container a2">
                 <div class="box_contain">
-                    <div *ngFor="let ticket of tickets; let i = index" class="wrapper" #wrapper>
-                        <div #ticket class="ticket d1" [ngStyle]="getStyle(i)">
-                          <img class="imagen" [src]="ticket.img" alt="">
-                          <div class="bg1" [ngStyle]="getBg1Style(i)" [ngStyle]="getPseudoElementStyle(i)"></div>
-                          <div class="bg2" [ngStyle]="getBg2Style(i)" [ngStyle]="getPseudoElementStyle(i)"></div>
-                          <h1>{{ ticket.title }}</h1>
+                    <div #wrapper class="wrapper">
+                        <div #ticket class="ticket d1">
+                            <img class="imagen" src="../../assets/img/angular.png" alt="">
+                            <div class="bg1"></div>
+                            <div class="bg2"> </div>
+                            <h1>Angular</h1>
+                          <div class="bg"></div>
+                        </div>
+                        
+                      </div>
+                      <div #wrapper2 class="wrapper">
+                        <div #ticket2 class="ticket d2">
+                          <img class="imagen" src="../../assets/img/mysql.png" alt="">
+                          <div class="bg1"></div>
+                          <div class="bg2"></div>
+                          <h1>Mysql</h1>
                           <div class="bg"></div>
                         </div>
                       </div>
@@ -107,7 +115,6 @@
             </div>
         </div>
     </section>
-
     <div class="footer">
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. </p>
     </div>
