--- a/src/app/resume/resume.component.html
+++ b/src/app/resume/resume.component.html
@@ -1,11 +1,12 @@
 <div class="resumen">
-    <div class="title">
-        <div class="text-animate2">
-            <h2>Resumen</h2>
-        </div>
-        <div class="line"></div>
-    </div>
+    
     <section class="section">
+        <div class="title">
+            <div class="text-animate2">
+                <h2>Resumen</h2>
+            </div>
+            <div class="line"></div>
+        </div>
         <div class="container">
             <div class="conte">
                 <h1 class="heading"><i class='bx bxs-graduation c1'></i>Educacion</h1>
@@ -92,8 +93,8 @@
             </div>
             <div class="container a2">
                 <div class="box_contain">
-                    <div #wrapper class="wrapper">
-                        <div #ticket class="ticket d1">
+                    <div #wrapper1 class="wrapper">
+                        <div #ticket1 class="ticket d1">
                             <img class="imagen" src="../../assets/img/angular.png" alt="">
                             <div class="bg1"></div>
                             <div class="bg2"> </div>
@@ -108,6 +109,43 @@
                           <div class="bg1"></div>
                           <div class="bg2"></div>
                           <h1>Mysql</h1>
+                          <div class="bg"></div>
+                        </div>
+                      </div>
+                      <div #wrapper3 class="wrapper">
+                        <div #ticket3 class="ticket d3">
+                          <img class="imagen" src="../../assets/img/node.png" alt="">
+                          <div class="bg1"></div>
+                          <div class="bg2"></div>
+                          <h1>Node</h1>
+                          <div class="bg"></div>
+                        </div>
+                      </div>
+                      <div #wrapper4 class="wrapper">
+                        <div #ticket4 class="ticket d4">
+                            <img class="imagen" src="../../assets/img/js.png" alt="">
+                            <div class="bg1"></div>
+                            <div class="bg2"> </div>
+                            <h1>Java Script</h1>
+                          <div class="bg"></div>
+                        </div>
+                        
+                      </div>
+                      <div #wrapper5 class="wrapper">
+                        <div #ticket5 class="ticket d5">
+                          <img class="imagen" src="../../assets/img/html.png" alt="">
+                          <div class="bg1"></div>
+                          <div class="bg2"></div>
+                          <h1>Html</h1>
+                          <div class="bg"></div>
+                        </div>
+                      </div>
+                      <div #wrapper6 class="wrapper">
+                        <div #ticket6 class="ticket d6">
+                          <img class="imagen" src="../../assets/img/node.png" alt="">
+                          <div class="bg1"></div>
+                          <div class="bg2"></div>
+                          <h1>Css</h1>
                           <div class="bg"></div>
                         </div>
                       </div>
