--- a/src/app/resume/resume.component.html
+++ b/src/app/resume/resume.component.html
@@ -117,7 +117,7 @@
                           <img class="imagen" src="../../assets/img/node.png" alt="">
                           <div class="bg1"></div>
                           <div class="bg2"></div>
-                          <h1>Node</h1>
+                          <h1>Node js</h1>
                           <div class="bg"></div>
                         </div>
                       </div>
@@ -142,7 +142,7 @@
                       </div>
                       <div #wrapper6 class="wrapper">
                         <div #ticket6 class="ticket d6">
-                          <img class="imagen" src="../../assets/img/node.png" alt="">
+                          <img class="imagen" src="../../assets/img/css.png" alt="">
                           <div class="bg1"></div>
                           <div class="bg2"></div>
                           <h1>Css</h1>
