modificaciones voy a cambiar el sidenav y ponerlo en el body igual voy a cambiar el header para que agrege lo que esta en points

--- a/src/styles.css
+++ b/src/styles.css
@@ -71,7 +71,7 @@ body.dark-theme {
 
     /* //////////////header//////////// */
 
-    --color-azul-neon: hsl(186, 100%, 50%);
+    --color-azul-neon: #00e5ff;
     --color-borde-azul: hsl(0, 0%, 0%);
 
     /* ///////////////////////about/////////////// */
