--- a/src/app/resume/resume.component.html
+++ b/src/app/resume/resume.component.html
@@ -108,7 +108,7 @@
                           <img class="imagen" src="../../assets/img/mysql.png" alt="">
                           <div class="bg1"></div>
                           <div class="bg2"></div>
-                          <h1>Mysql</h1>
+                          <h1>Mysq</h1>
                           <div class="bg"></div>
                         </div>
                       </div>
