modificaciones en el hedear n

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-perfil></app-perfil>
 <app-header></app-header>
 <app-body ></app-body>
-<app-sidenav (onToggleSideNav)="onToggleSideNav($event)"></app-sidenav>
+<app-sidenav></app-sidenav>
 <app-pointsatar></app-pointsatar>
