--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,4 +1,4 @@
-.header {
+.container {
     background: var(--backgraund-componets);
     margin: 10px;
     transition: all .5s ease;
@@ -6,7 +6,7 @@
     z-index: 1;
     top: 0;
     margin-left: 23rem;
-    width: calc(100% - 34rem);
+    width: calc(100% - 25rem);
     display: flex;
     height: 110px;
     border-radius: 15px;
@@ -14,6 +14,11 @@
     justify-content: center;
     box-shadow: inset 0px 0px 6px 2px var(--border-shadow-interior);
 
+}
+.header {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 
@@ -71,7 +76,10 @@ h2 {
 
 
 
-
+.pointerstar{
+    position: absolute;
+    right: 0px;
+}
 
 
 .social {
@@ -156,4 +164,131 @@ h2 {
 
   
   
-  
+.status {
+    padding: 22px 35px 22px 35px;
+    gap: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+}
+
+
+.nav_btns {
+    display: flex;
+    justify-content: center;
+
+}
+
+.moon {
+    display: flex;
+    background: #000;
+    border: 1px solid #737270;
+    width: 30px;
+    justify-content: center;
+    border-top-left-radius: 8px;
+    border-bottom-left-radius: 8px;
+    box-shadow: 0px 0px 6px #737270;
+    height: 25px;
+
+}
+
+.moon:hover {
+    transform: scale(1.2);
+    background: #fff;
+    color: #000;
+
+}
+
+
+
+.uil-moon {
+    margin-top: 2px;
+}
+
+
+
+
+.change-theme:hover {
+    cursor: pointer;
+    color: #000;
+
+}
+
+.bx {
+    color: #ccc;
+
+}
+.bxs-star {
+    color: #daaa3f;
+
+}
+.nav_btns_stars {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #ccc;
+}
+
+.nav_btns_stars span {
+    background: #002639;
+    border-radius: 8px;
+    padding: 0px 5px 0px 5px;
+    margin-left: 15px;
+}
+
+.nav_btns_stars p {
+    font-size: 12px;
+
+}
+
+.music {
+    display: flex;
+    background: #000;
+    border: 1px solid #737270;
+    width: 30px;
+    height: 25px;
+    justify-content: center;
+    border-top-right-radius: 8px;
+    border-bottom-right-radius: 8px;
+    box-shadow: 0px 0px 6px #737270;
+    align-items: center;
+
+}
+
+.music:hover {
+    transform: scale(1.1);
+}
+
+.star {
+    display: flex;
+    background: #000;
+    border: 1px solid #737270;
+    width: 30px;
+    height: 25px;
+    justify-content: center;
+    border-top-left-radius: 8px;
+    border-bottom-left-radius: 8px;
+    box-shadow: 0px 0px 6px #737270;
+    align-items: center;
+}
+
+.star:hover {
+    transform: scale(1.1);
+ 
+
+}
+
+.puntos {
+    display: flex;
+    background: #000;
+    border: 1px solid #737270;
+    width: 80px;
+    height: 25px;
+    justify-content: center;
+    border-top-right-radius: 8px;
+    border-bottom-right-radius: 8px;
+    box-shadow: 0px 0px 6px #737270;
+    align-items: center;
+}
