--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -1,10 +1,9 @@
-<div class="sidenav" [ngClass]="  'sidenav-collapsed'">
+<div class="sidenav" >
    
     <ul class="sidenav_nav">
         <li class="sidenav_nav_item" *ngFor="let data of navData">
             <a href="#" class="sidenav_nav_link" [routerLink]="[data.routerLink]" routerLinkActive="active"
                 [routerLinkActiveOptions]="{exact: true}">
-                <i class="sidenav_link_icon" [class]="data.icon"></i>
 
                 <span class="sidenav_link_text">{{data.label}}</span>
             </a>
