--- a/src/app/body/body.component.css
+++ b/src/app/body/body.component.css
@@ -13,3 +13,64 @@
     box-shadow: inset 0px 0px 6px 2px var(--border-shadow-interior);
 
 }
+.sidenav {
+    background: var(--backgraund-componets);
+    transition: all .5s ease;
+    width: 100%;
+    height: auto;
+    display: flex;
+    border-radius: 15px;
+    box-shadow: inset 0px 0px 6px 2px var(--border-shadow-interior);
+    align-items: center;
+    justify-content: center;
+}
+.sidenav_nav {
+    list-style: none;
+    display: flex;
+    gap: 10px;
+    padding: 10px;
+    align-items: center;
+    cursor: pointer;
+
+}
+.sidenav .sidenav_nav .sidenav_nav_item {
+    position: relative;
+   
+}
+.sidenav_nav .sidenav_nav_link {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    text-decoration: none;
+    overflow: hidden;
+    justify-content: center;
+    padding: 10px;
+    border-radius: 10px;
+    color: #fff;
+
+}
+
+.sidenav_nav .sidenav_link_text {
+    opacity: 1;
+    font-size: 14px;
+    font-weight: 500;
+
+} 
+
+.sidenav_nav .sidenav_nav_item .sidenav_nav_link:hover {
+    box-shadow: inset 0px 0px 5px 2px var(--color-naranga-neon);
+
+}
+.active {
+    transition: all .5s ease;
+    box-shadow: none !important;
+}
+
+
+.active .sidenav_link_text {
+    color: var(--color-naranga-neon);
+    font-size: 16px;
+    font-weight: 800;
+
+}
+
