--- a/src/styles.css
+++ b/src/styles.css
@@ -4,10 +4,12 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: "Poppins", sans-serif;
+list-style: none;
 }
 
+
 body {
-    position: relative;
     font-family: "Poppins", sans-serif;
     background: var(--backgraund-body);
 }
