--- a/src/app/resume/resume.component.html
+++ b/src/app/resume/resume.component.html
@@ -18,7 +18,7 @@
                                 <p>2019 Finalizado </p>
                             </div>
                             <h4>Bachillerato </h4>
-                            <p>Jorge Eliecer Gaitan </p>
+                            <p>Colegio - Jorge Eliecer Gaitan </p>
                             <p>Colombia
                                 <img class="img-1" src="https://cdn-icons-png.flaticon.com/512/330/330508.png" alt="">
                             </p>
@@ -28,20 +28,21 @@
                         <div class="text">
                             <div class="experiencia__calendar">
                                 <i class="uil uil-calendar-alt"></i>
-                                <p>2023 Finalizado </p>
+                                <p> 2022 / 2023 Finalizado </p>
                             </div>
-                            <h4>Analisis y Desarrollo De Sistemas De Informacion </h4>
-                            <p>Sena - Tecnologo </p>
+                            <h4>Auxiliar Qa Analyst </h4>
+                            <p>Empresa - Lineru-Tangelo </p>
                             <p>Colombia
                                 <img class="img-1" src="https://cdn-icons-png.flaticon.com/512/330/330508.png" alt="">
                             </p>
                         </div>
                     </div>
+                    
                     <div class="box b1">
                         <div class="text">
                             <div class="experiencia__calendar">
                                 <i class="uil uil-calendar-alt"></i>
-                                <p> 2019 / Actualmente 7º</p>
+                                <p> 2019 / Actualmente 8º</p>
                             </div>
                             <h4>Ingenieria de Sistemas</h4>
                             <p>UNAD </p>
@@ -50,6 +51,7 @@
                             </p>
                         </div>
                     </div>
+                   
                 </div>
             </div>
             <div class="conte">
@@ -62,7 +64,7 @@
                                 <p> 2022 / 2023 Finalizado </p>
                             </div>
                             <h4>Auxiliar Frontend </h4>
-                            <p>Lineru - Tangelo </p>
+                            <p>Empresa - Lineru-Tangelo </p>
                             <p>Colombia
                                 <img class="img-1" src="https://cdn-icons-png.flaticon.com/512/330/330508.png" alt="">
                             </p>
@@ -72,10 +74,10 @@
                         <div class="text">
                             <div class="experiencia__calendar">
                                 <i class="uil uil-calendar-alt"></i>
-                                <p> 2022 / 2023 Finalizado </p>
+                                <p>2023 Finalizado </p>
                             </div>
-                            <h4>Auxiliar Qa Analyst </h4>
-                            <p>Lineru - Tangelo </p>
+                            <h4>Analisis y Desarrollo De Sistemas De Informacion </h4>
+                            <p>Sena - Tecnologo </p>
                             <p>Colombia
                                 <img class="img-1" src="https://cdn-icons-png.flaticon.com/512/330/330508.png" alt="">
                             </p>
