--- a/src/app/resume/resume.component.html
+++ b/src/app/resume/resume.component.html
@@ -1,5 +1,5 @@
 <div class="resumen">
-    
+
     <section class="section">
         <div class="title">
             <div class="text-animate2">
@@ -37,7 +37,7 @@
                             </p>
                         </div>
                     </div>
-                    
+
                     <div class="box b1">
                         <div class="text">
                             <div class="experiencia__calendar">
@@ -51,7 +51,7 @@
                             </p>
                         </div>
                     </div>
-                   
+
                 </div>
             </div>
             <div class="conte">
@@ -101,59 +101,68 @@
                             <div class="bg1"></div>
                             <div class="bg2"> </div>
                             <h1>Angular</h1>
-                          <div class="bg"></div>
+                            <div class="bg"></div>
                         </div>
-                        
-                      </div>
-                      <div #wrapper2 class="wrapper">
+
+                    </div>
+                    <div #wrapper2 class="wrapper">
                         <div #ticket2 class="ticket d2">
-                          <img class="imagen" src="../../assets/img/mysql.png" alt="">
-                          <div class="bg1"></div>
-                          <div class="bg2"></div>
-                          <h1>Mysq</h1>
-                          <div class="bg"></div>
+                            <img class="imagen" src="../../assets/img/mysql.png" alt="">
+                            <div class="bg1"></div>
+                            <div class="bg2"></div>
+                            <h1>Mysq</h1>
+                            <div class="bg"></div>
                         </div>
-                      </div>
-                      <div #wrapper3 class="wrapper">
+                    </div>
+                    <div #wrapper3 class="wrapper">
                         <div #ticket3 class="ticket d3">
-                          <img class="imagen" src="../../assets/img/node.png" alt="">
-                          <div class="bg1"></div>
-                          <div class="bg2"></div>
-                          <h1>Node js</h1>
-                          <div class="bg"></div>
+                            <img class="imagen" src="../../assets/img/node.png" alt="">
+                            <div class="bg1"></div>
+                            <div class="bg2"></div>
+                            <h1>Node js</h1>
+                            <div class="bg"></div>
                         </div>
-                      </div>
-                      <div #wrapper4 class="wrapper">
+                    </div>
+                    <div #wrapper4 class="wrapper">
                         <div #ticket4 class="ticket d4">
                             <img class="imagen" src="../../assets/img/js.png" alt="">
                             <div class="bg1"></div>
                             <div class="bg2"> </div>
                             <h1>Java Script</h1>
-                          <div class="bg"></div>
+                            <div class="bg"></div>
                         </div>
-                        
-                      </div>
-                      <div #wrapper5 class="wrapper">
+
+                    </div>
+                    <div #wrapper5 class="wrapper">
                         <div #ticket5 class="ticket d5">
-                          <img class="imagen" src="../../assets/img/html.png" alt="">
-                          <div class="bg1"></div>
-                          <div class="bg2"></div>
-                          <h1>Html</h1>
-                          <div class="bg"></div>
+                            <img class="imagen" src="../../assets/img/html.png" alt="">
+                            <div class="bg1"></div>
+                            <div class="bg2"></div>
+                            <h1>Html</h1>
+                            <div class="bg"></div>
                         </div>
-                      </div>
-                      <div #wrapper6 class="wrapper">
+                    </div>
+                    <div #wrapper6 class="wrapper">
                         <div #ticket6 class="ticket d6">
-                          <img class="imagen" src="../../assets/img/css.png" alt="">
-                          <div class="bg1"></div>
-                          <div class="bg2"></div>
-                          <h1>Css</h1>
-                          <div class="bg"></div>
+                            <img class="imagen" src="../../assets/img/css.png" alt="">
+                            <div class="bg1"></div>
+                            <div class="bg2"></div>
+                            <h1>Css</h1>
+                            <div class="bg"></div>
                         </div>
-                      </div>
+                    </div>
                 </div>
             </div>
         </div>
+        <div class="referencias">
+            <div class="title">
+                <div class="text-animate2">
+                    <h2>Referencias</h2>
+                </div>
+                <div class="line"></div>
+            </div>
+        </div>
+
     </section>
     <div class="footer">
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. </p>
