--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -16,7 +16,7 @@
         </p>
 
         <div class="container">
-            <h1 class="heading">Lo que hago!</h1>
+            <h1 class="heading">Lo que hago</h1>
             <div class="box_container">
                 <div class="box b1">
                     <div class="icon "><i class=" fa-solid fa-swatchbook"></i></div>
