--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,8 +1,18 @@
 <div class="container">
   <div class="header">
-    <h2 class="border">Junior FullStak</h2>
-    <h2 class="wave">Junior FullStak</h2>
-     <div class="social">
+    <div class="titulo">
+      <div class="b1">
+        <h2 class="border">Junior</h2>
+        <h2 class="wave">Junior</h2>
+      </div>
+      <div class="b2">
+
+        <h2 class="border2">FullStak</h2>
+        <h2 class="wave2">FullStak</h2>
+      </div>
+
+    </div>
+    <div class="social">
       <div class="card">
         <a href="#" class="socialContainer containerOne">
           <i class="ri-linkedin-fill"></i>
@@ -42,4 +52,3 @@
     </div>
   </div>
 </div>
-
