--- a/src/app/perfil/perfil.component.css
+++ b/src/app/perfil/perfil.component.css
@@ -4,7 +4,7 @@
 }
 
 .container {
-    background: var(--backgraund-componets);
+    background: hsl(204deg 100% 3% / 80%);
     margin: 10px;
     position: fixed;
     z-index: 1;
@@ -23,7 +23,9 @@
 
 
 .imagen {
-    background: var(--backgraund-interior-img);
+    background: url(../../assets/img/fondo.jpg );
+        background-size: cover;
+
     margin: 5px;
     z-index: 2;
     width: 240px;
@@ -32,7 +34,7 @@
     max-height: 220px;
     overflow: hidden;
     position: relative;
-    box-shadow: inset 0px 0px 18px 0px var(--border-shadow-interior-img);
+    box-shadow: inset 0px 0px 20px 10px hsl(0deg 0% 0.100%);
 
 }
 
@@ -42,7 +44,7 @@
     height: 300px;
     border-radius: 15px;
     margin-left: -30px;
-    filter: drop-shadow(-1px -1px 10px var(--border-shadow-interior-img));
+    filter: drop-shadow(0px -50px 50px hsl(0deg 0% 0.100%));
     transform: rotate(357deg);
     margin-bottom: 5px;
     transition: .9s;
@@ -53,8 +55,8 @@
 .imagen img:hover {
     transform: scale(0.5) translateY(-80px) translateX(35px);
     transition: .9s;
-    box-shadow: inset 0px 0px 18px 0px var(--border-shadow-interior-img);
-    filter: drop-shadow(-1px -1px 10px var(--border-shadow-interior-img));
+    box-shadow: inset 0px 0px 18px 0px hsl(0deg 0% 0.100%);
+    filter: drop-shadow(-1px -1px 10px hsl(0deg 0% 0.100%));
 
 }
 
