--- a/src/styles.css
+++ b/src/styles.css
@@ -5,14 +5,33 @@
     padding: 0;
     box-sizing: border-box;
     font-family: "Poppins", sans-serif;
-list-style: none;
+    list-style: none;
 }
+
 
 
 body {
+    min-height: 100vh;
+    /* Asegura que el body ocupe al menos toda la altura de la ventana */
     font-family: "Poppins", sans-serif;
-    background: var(--backgraund-body);
+    background: url(./assets/img/fondo.jpg);
+    background-size: cover;
 }
+
+body::before {
+    content: '';
+    position: fixed;
+    /* Usa fixed para que el overlay cubra toda la pantalla */
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.86);
+    /* Ajusta el valor de opacidad según sea necesario */
+    z-index: -1;
+    /* Asegura que el pseudo-elemento esté detrás del contenido */
+}
+
 
 
 :root {
