--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,5 +1,5 @@
 .container {
-    background: var(--backgraund-componets);
+    background: hsl(204deg 100% 3% / 80%);
     margin: 10px;
     transition: all .5s ease;
     position: relative;
@@ -15,10 +15,13 @@
     box-shadow: inset 0px 0px 6px 2px var(--border-shadow-interior);
 
 }
+
 .header {
     display: flex;
     align-items: center;
     justify-content: center;
+    width: 100%;
+    flex-direction: column;
 }
 
 
@@ -27,33 +30,97 @@ h2 {
     position: absolute;
 }
 
+.titulo {
+    display: flex;
+    gap: 190px;
+    align-items: center;
+    justify-content: center;
+}
+
+.b1 {
+    display: flex;
+    justify-content: center;
+}
+
+.b2 {
+    display: flex;
+    justify-content: center;
+}
+
 .border {
     color: #000;
     text-shadow:
-        -1px -1px 0 var( --color-azul-neon),
-        1px -1px 0 var( --color-azul-neon),
-        1px 1px 0 var( --color-azul-neon),
-        -1px 1px 0 var( --color-azul-neon);
+        -1px -1px 0 var(--color-azul-neon),
+        1px -1px 0 var(--color-azul-neon),
+        1px 1px 0 var(--color-azul-neon),
+        -1px 1px 0 var(--color-azul-neon);
     text-shadow: 0px 0px 6px var(--color-borde-azul);
     top: 0;
 }
 
 .wave {
-    color: var( --color-azul-neon);
+    color: var(--color-azul-neon);
     animation: wave 3s ease-in-out infinite;
     top: 0;
 
 }
 
 @keyframes wave {
- 
+
     0%,
     100% {
         clip-path: polygon(0% 47%,
                 10% 48%,
                 33% 54%,
                 54% 60%,
-                70% 61%, 
+                70% 61%,
+                84% 59%,
+                100% 52%,
+                100% 100%,
+                0% 100%);
+    }
+
+    50% {
+        clip-path: polygon(0% 60%,
+                15% 65%,
+                34% 66%,
+                51% 62%,
+                67% 50%,
+                84% 45%,
+                100% 46%,
+                100% 100%,
+                0% 100%);
+    }
+}
+
+
+.border2 {
+    color: #000;
+    text-shadow:
+        -1px -1px 0 var(--color-naranga-neon),
+        1px -1px 0 var(--color-naranga-neon),
+        1px 1px 0 var(--color-naranga-neon),
+        -1px 1px 0 var(--color-naranga-neon);
+    text-shadow: 0px 0px 6px var(--color-naranga-neon);
+    top: 0;
+}
+
+.wave2 {
+    color: var(--color-naranga-neon);
+    animation: wave2 3s ease-in-out infinite;
+    top: 0;
+
+}
+
+@keyframes wave2 {
+
+    0%,
+    100% {
+        clip-path: polygon(0% 47%,
+                10% 48%,
+                33% 54%,
+                54% 60%,
+                70% 61%,
                 84% 59%,
                 100% 52%,
                 100% 100%,
@@ -76,9 +143,9 @@ h2 {
 
 
 
-.pointerstar{
-position: absolute;
-right: 0;
+.pointerstar {
+    position: absolute;
+    right: 0;
 }
 
 
@@ -108,7 +175,7 @@ right: 0;
     overflow: hidden;
     text-decoration: none;
     transition-duration: .3s;
-    box-shadow:  0px 0px 5px 0px var(--color-borde-azul);
+    box-shadow: 0px 0px 5px 0px var(--color-borde-azul);
 
 }
 
@@ -123,7 +190,7 @@ right: 0;
     background-color: #000cfa3e;
     color: #0026ff;
     transform: scale(1.3);
-    box-shadow:none;
+    box-shadow: none;
 
 }
 
@@ -138,7 +205,7 @@ right: 0;
     background-color: #fff;
     transform: scale(1.3);
     color: #000;
-    box-shadow:none;
+    box-shadow: none;
 
 }
 
@@ -152,7 +219,7 @@ right: 0;
     background-color: #a81bb56a;
     transform: scale(1.3);
     color: #a407ff;
-    box-shadow:none;
+    box-shadow: none;
 
 }
 
@@ -162,8 +229,8 @@ right: 0;
 }
 
 
-  
-  
+
+
 .status {
     padding: 22px 35px 22px 35px;
     gap: 10px;
@@ -220,10 +287,12 @@ right: 0;
     color: #ccc;
 
 }
+
 .bxs-star {
     color: #daaa3f;
 
 }
+
 .nav_btns_stars {
     display: flex;
     justify-content: center;
@@ -276,7 +345,7 @@ right: 0;
 
 .star:hover {
     transform: scale(1.1);
- 
+
 
 }
 
